# tidal-midi

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  tidal-midi.cabal
Sound/Tidal/: Blofeld.hs  GenericMIDI.hs  MBase01.hs  MeeblipAnode.hs  Rytm.hs  SimpleSynth.hs  Synthino.hs  Tetra.hs  Volca.hs  VolcaBass.hs  VolcaBeats.hs  VolcaKeys.hs
Sound/Tidal/MIDI/: Ambika.hs  Blofeld.hs  CC.hs  Circuit.hs  Context.hs  Control.hs  Device.hs  ER1.hs  GMPerc.hs  JamJarDrums.hs  KorgKP3.hs  MBase01.hs  MiniAtmegatron.hs  Minilogue.hs  Output.hs  Prophet08.hs  SimpleSynth.hs  Stream.hs  Streichfett.hs  Synth.hs  SynthParams.hs  Synthino.hs  System1M.hs  Tanzbar.hs  Tetra.hs  VolcaBass.hs  VolcaBeats.hs  VolcaFM.hs  VolcaKeys.hs  VolcaKick.hs  volcakick.hs
Utils/: Main.hs
doc/: blofeld-params.md  midiable-functions.md  synth-mapping.md  synths.md
