name:                tidal-midi
version:             0.8
synopsis:            MIDI support for tidal
-- description:
homepage:            http://tidal.lurk.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2015
category:            Sound
build-type:          Simple
cabal-version:       >=1.4

Description: MIDI support for Tidal. Supports Volca Keys, Bass and Beats and other synths. Interface is likely to change significantly.

library
  Exposed-modules: Sound.Tidal.MIDI.Context
                   Sound.Tidal.MIDI.VolcaBeats
                   Sound.Tidal.MIDI.VolcaBass
                   Sound.Tidal.MIDI.VolcaKeys
                   Sound.Tidal.MIDI.Control
                   Sound.Tidal.MIDI.Device
                   Sound.Tidal.MIDI.Stream
                   Sound.Tidal.MIDI.Synth
                   Sound.Tidal.MIDI.SynthParams
                   
  Build-depends: base < 5, tidal == 0.8, PortMidi == 0.1.6.0, time, containers, transformers
