name:                tidal-midi
version:             0.8.2
synopsis:            MIDI support for tidal
-- description:
homepage:            http://tidal.lurk.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2015
category:            Sound
build-type:          Simple
cabal-version:       >=1.6
-- Travis CI integration
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

Description: MIDI support for Tidal. Supports Volca Keys, Bass and Beats and other synths. Interface is likely to change significantly.

library
  Exposed-modules: Sound.Tidal.MIDI.Context
                   Sound.Tidal.MIDI.Device
                   Sound.Tidal.MIDI.Control
                   Sound.Tidal.MIDI.VolcaBeats
                   Sound.Tidal.MIDI.VolcaBass
                   Sound.Tidal.MIDI.VolcaKeys
                   Sound.Tidal.MIDI.Stream
                   Sound.Tidal.MIDI.Synth
                   Sound.Tidal.MIDI.SynthParams
                   Sound.Tidal.MIDI.System1M
                   Sound.Tidal.MIDI.KorgKP3

  Build-depends: base < 5, tidal == 0.8.2, PortMidi == 0.1.6.0, time, containers, transformers

source-repository head
  type:     git
  location: https://github.com/tidalcycles/tidal-midi
